hero & about section creat

--- a/index.html
+++ b/index.html
@@ -4,10 +4,61 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
     <!-- title -->
     <title>Food Village</title>
+
+    <!-- favicon -->
+    <link rel="shortcut icon" href="images/FV-Favicon.png" type="image/x-icon" />
+
+    <!-- google font -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet" />
+
     <!-- css -->
     <link rel="stylesheet" href="style.css" />
   </head>
-  <body></body>
+  <body>
+    <!-- hero section -->
+    <section class="flex-box">
+      <!-- text section -->
+      <div class="half-width">
+        <h1>
+          <span class="orange-color">Skip</span>The Diet, <br />
+          Just Eat Healthy With Food Network
+        </h1>
+
+        <p>Imagine you don't need a diet because we provide healthy and delicious food for you!</p>
+
+        <a class="button" href="https://www.linkedin.com/in/md-majharul-islam-a42b63200/">Order Food</a>
+      </div>
+
+      <!-- image section -->
+      <div class="half-width">
+        <img src="images/hero.png" alt="" />
+      </div>
+    </section>
+
+    <!-- About section -->
+    <section class="about-section flex-box">
+      <!-- image section -->
+      <div class="half-width">
+        <img src="images/banner-item.png" alt="#" />
+      </div>
+
+      <!-- text section -->
+      <div class="half-width">
+        <h2>About Me</h2>
+
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Condimentum diam orci pretium a pharetra,
+          feugiat cursus. Dictumst risus, sem egestas odio cras adipiscing vulputate. Nisi, risus in suscipit
+          non. Non commodo volutpat, pharetra, vel.
+        </p>
+
+        <a class="button" href="https://www.linkedin.com/in/md-majharul-islam-a42b63200/">Contact me</a>
+      </div>
+    </section>
+  </body>
 </html>
