solved image sourch issue

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <title>Food Village</title>
 
     <!-- favicon -->
-    <link rel="shortcut icon" href="images/FV-Favicon.png" type="image/x-icon" />
+    <link rel="shortcut icon" href="Images/FV-Favicon.png" type="image/x-icon" />
 
     <!-- google font -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -36,7 +36,7 @@
 
       <!-- image section -->
       <div class="half-width">
-        <img src="images/hero.png" alt="" />
+        <img src="Images/hero.png" alt="" />
       </div>
     </section>
 
@@ -44,7 +44,7 @@
     <section class="about-section flex-box">
       <!-- image section -->
       <div class="half-width">
-        <img src="images/banner-item.png" alt="#" />
+        <img src="Images/banner-item.png" alt="#" />
       </div>
 
       <!-- text section -->
