recipies section compleet

--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
       <!-- text section -->
       <div class="half-width">
         <h1>
-          <span class="orange-color">Skip</span>The Diet, <br />
-          Just Eat Healthy With Food Network
+          Skip The Diet, <br />
+          Just Eat Healthy With <span class="orange-color">Food Village</span>
         </h1>
 
         <p>Imagine you don't need a diet because we provide healthy and delicious food for you!</p>
@@ -49,15 +49,58 @@
 
       <!-- text section -->
       <div class="half-width">
-        <h2>About Me</h2>
+        <h2>About <span class="orange-color">Food Village</span></h2>
 
         <p>
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Condimentum diam orci pretium a pharetra,
-          feugiat cursus. Dictumst risus, sem egestas odio cras adipiscing vulputate. Nisi, risus in suscipit
-          non. Non commodo volutpat, pharetra, vel.
+          <strong>Food Village Ltd.</strong> is on of the best restaurant in Bangladesh . We providing all
+          items of food and also an active online delivery service. We also provide job to unemployed, free
+          food provides to orphanages, financial support to the poor students, etc.
         </p>
 
         <a class="button" href="https://www.linkedin.com/in/md-majharul-islam-a42b63200/">Contact me</a>
+      </div>
+    </section>
+
+    <!--  recipies section  -->
+    <section class="recipies">
+      <h2 class="rh2">Our recipies</h2>
+      <p class="rp">
+        We believe that excellent food can enhance experiences and empower people to be better. So we work to
+        channel our passion for food into enriching and nourishing the lives we touch. And we do it with a
+        singular goal: to enable great food experiences that go beyond what’s expected.
+      </p>
+
+      <!-- recipies item section -->
+      <div class="all-items flex-box">
+        <!-- item 1 -->
+        <div class="recipes-item">
+          <img src="Images/r1.jpeg" alt="food not found" />
+          <h2>Strawberry Shortcake</h2>
+          <p>
+            For our simple and iconic shortcake, we discovered a great double-stacking technique that creates
+            super light and high biscuits that are easy to split.
+          </p>
+        </div>
+
+        <!-- item 2 -->
+        <div class="recipes-item">
+          <img src="Images/r2.jpeg" alt="food not found" />
+          <h2>Chicken Tikka Masala</h2>
+          <p>
+            Chicken Tikka Masala is a spicy, tomato-based dish seasoned with garlic, ginger, fenugreek and
+            garam masala. In this recipe flavor.
+          </p>
+        </div>
+
+        <!-- item 3 -->
+        <div class="recipes-item">
+          <img src="Images/r3.jpeg" alt="food not found" />
+          <h2>Chicken Noodle Soup</h2>
+          <p>
+            We chose to use chicken leg quarters rather than a whole chicken to make this well-loved soup. It
+            shortens the cooking time without flavor.
+          </p>
+        </div>
       </div>
     </section>
   </body>
