social section complet

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
     <!--  recipies section  -->
     <section class="recipies">
       <h2 class="rh2">Our recipies</h2>
-      <p class="rp">
+      <p class="gray-color">
         We believe that excellent food can enhance experiences and empower people to be better. So we work to
         channel our passion for food into enriching and nourishing the lives we touch. And we do it with a
         singular goal: to enable great food experiences that go beyond what’s expected.
@@ -76,7 +76,7 @@
         <div class="recipes-item">
           <img src="Images/r1.jpeg" alt="food not found" />
           <h2>Strawberry Shortcake</h2>
-          <p>
+          <p class="gray-color">
             For our simple and iconic shortcake, we discovered a great double-stacking technique that creates
             super light and high biscuits that are easy to split.
           </p>
@@ -86,7 +86,7 @@
         <div class="recipes-item">
           <img src="Images/r2.jpeg" alt="food not found" />
           <h2>Chicken Tikka Masala</h2>
-          <p>
+          <p class="gray-color">
             Chicken Tikka Masala is a spicy, tomato-based dish seasoned with garlic, ginger, fenugreek and
             garam masala. In this recipe flavor.
           </p>
@@ -96,11 +96,32 @@
         <div class="recipes-item">
           <img src="Images/r3.jpeg" alt="food not found" />
           <h2>Chicken Noodle Soup</h2>
-          <p>
+          <p class="gray-color">
             We chose to use chicken leg quarters rather than a whole chicken to make this well-loved soup. It
             shortens the cooking time without flavor.
           </p>
         </div>
+      </div>
+    </section>
+
+    <!-- social section -->
+    <section id="social" class="flex-box">
+      <!-- item1 -->
+      <div class="social-item">
+        <h2>700K</h2>
+        <p class="gray-color">Youtube Subscribers</p>
+      </div>
+
+      <!-- item1 -->
+      <div class="social-item">
+        <h2>2.4M</h2>
+        <p class="gray-color">Instagram Followers</p>
+      </div>
+
+      <!-- item1 -->
+      <div class="social-item">
+        <h2>100K</h2>
+        <p class="gray-color">Dribbble Shot Likes</p>
       </div>
     </section>
   </body>
