--- a/index.html
+++ b/index.html
@@ -108,21 +108,27 @@
     <section id="social" class="flex-box">
       <!-- item1 -->
       <div class="social-item">
-        <h2>700K</h2>
+        <h1>700K</h1>
         <p class="gray-color">Youtube Subscribers</p>
       </div>
 
       <!-- item1 -->
       <div class="social-item">
-        <h2>2.4M</h2>
+        <h1>2.4M</h1>
         <p class="gray-color">Instagram Followers</p>
       </div>
 
       <!-- item1 -->
       <div class="social-item">
-        <h2>100K</h2>
+        <h1>100K</h1>
         <p class="gray-color">Dribbble Shot Likes</p>
       </div>
+    </section>
+
+    <!-- footer section -->
+    <section class="footer">
+      <h1><span class="orange-color">FOOD</span> VILLAGE</h1>
+      <p>Eat h eal thy to live h eal thy. Live h eal thy to live happy.</p>
     </section>
   </body>
 </html>
