contact section complet

--- a/index.html
+++ b/index.html
@@ -31,7 +31,9 @@
 
         <p>Imagine you don't need a diet because we provide healthy and delicious food for you!</p>
 
-        <a class="button" href="https://www.linkedin.com/in/md-majharul-islam-a42b63200/">Order Food</a>
+        <a class="button" href="https://www.linkedin.com/in/md-majharul-islam-a42b63200/" target="blank"
+          >Order Food</a
+        >
       </div>
 
       <!-- image section -->
@@ -57,7 +59,9 @@
           food provides to orphanages, financial support to the poor students, etc.
         </p>
 
-        <a class="button" href="https://www.linkedin.com/in/md-majharul-islam-a42b63200/">Contact me</a>
+        <a class="button" href="https://www.linkedin.com/in/md-majharul-islam-a42b63200/" target="blank"
+          >Contact me</a
+        >
       </div>
     </section>
 
@@ -122,6 +126,47 @@
       <div class="social-item">
         <h1>100K</h1>
         <p class="gray-color">Dribbble Shot Likes</p>
+      </div>
+    </section>
+
+    <!-- contact section -->
+
+    <section id="contact ">
+      <h2 class="ch2">Contact Us</h2>
+      <hr />
+
+      <div class="flex-box">
+        <!-- form -->
+        <div class="form">
+          <div class="in-div">
+            <label for="">Name:</label>
+            <input type="text" placeholder="Enter your name" />
+          </div>
+
+          <div class="in-div">
+            <label for="">Email:</label>
+            <input type="email" placeholder="Enter your name" />
+          </div>
+
+          <div class="">
+            <label for="">Message:</label>
+            <textarea name="" id="">text...</textarea> <br />
+          </div>
+
+          <div class="in-sub">
+            <input type="submit" value="submit" />
+          </div>
+        </div>
+
+        <!-- map -->
+        <div class="map">
+          <a
+            href="https://www.google.com/maps/search/food+village/@24.4941821,89.4493957,12z/data=!3m1!4b1"
+            target="blank"
+          >
+            <img src="Images//map.png" alt="location" />
+          </a>
+        </div>
       </div>
     </section>
 
