--- a/index.html
+++ b/index.html
@@ -20,6 +20,26 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
+    <!-- header section -->
+    <section class="header-section">
+      <!-- logo -->
+      <div class="logo">
+        <a href="#">
+          <img src="Images/fv logo.jpg" alt="logo" />
+        </a>
+      </div>
+      <!-- menu -->
+      <div class="menu">
+        <ul>
+          <li><a href="#">Home</a></li>
+          <li><a href="#">About</a></li>
+          <li><a href="#">Services</a></li>
+          <li><a href="#">Contact</a></li>
+          <li><a href="#">Feedbac</a></li>
+        </ul>
+      </div>
+    </section>
+
     <!-- hero section -->
     <section class="flex-box">
       <!-- text section -->
@@ -28,9 +48,7 @@
           Skip The Diet, <br />
           Just Eat Healthy With <span class="orange-color">Food Village</span>
         </h1>
-
         <p>Imagine you don't need a diet because we provide healthy and delicious food for you!</p>
-
         <a class="button" href="https://www.linkedin.com/in/md-majharul-islam-a42b63200/" target="blank"
           >Order Food</a
         >
@@ -52,13 +70,11 @@
       <!-- text section -->
       <div class="half-width">
         <h2>About <span class="orange-color">Food Village</span></h2>
-
         <p>
           <strong>Food Village Ltd.</strong> is on of the best restaurant in Bangladesh . We providing all
           items of food and also an active online delivery service. We also provide job to unemployed, free
           food provides to orphanages, financial support to the poor students, etc.
         </p>
-
         <a class="button" href="https://www.linkedin.com/in/md-majharul-islam-a42b63200/" target="blank"
           >Contact me</a
         >
@@ -68,7 +84,7 @@
     <!--  recipies section  -->
     <section class="recipies">
       <h2 class="rh2">Our recipies</h2>
-      <p class="gray-color">
+      <p class="rp">
         We believe that excellent food can enhance experiences and empower people to be better. So we work to
         channel our passion for food into enriching and nourishing the lives we touch. And we do it with a
         singular goal: to enable great food experiences that go beyond what’s expected.
@@ -85,7 +101,6 @@
             super light and high biscuits that are easy to split.
           </p>
         </div>
-
         <!-- item 2 -->
         <div class="recipes-item">
           <img src="Images/r2.jpeg" alt="food not found" />
@@ -95,7 +110,6 @@
             garam masala. In this recipe flavor.
           </p>
         </div>
-
         <!-- item 3 -->
         <div class="recipes-item">
           <img src="Images/r3.jpeg" alt="food not found" />
@@ -132,10 +146,12 @@
     <!-- contact section -->
 
     <section id="contact ">
+      <!-- contact part top -->
       <h2 class="ch2">Contact Us</h2>
       <hr />
 
-      <div class="flex-box">
+      <!-- contact part bottom -->
+      <div class="contact-bottom flex-box">
         <!-- form -->
         <div class="form">
           <div class="in-div">
